--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/JonnyBurger/ITProjectManagementUZH#readme",
   "dependencies": {
+    "express": "^4.13.3",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-less": "^3.0.5",
+    "socket.io": "^1.3.7",
     "underscore": "^1.8.3"
   }
 }
